@@ -1,5 +1,6 @@
 0.8.12b
 - Fix issue with mirror pushes failing due to missing PIL on some platforms
+- Push handling settings now default to play instantly for media and notification for all others
 
 0.8.10b
 - Fix issue causing the service not to connect to the push server after authorization
